# Snake_Game

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
assets/: map.txt
src/: game.cpp  game.h  main.cpp
src/events/: gameEvent.cpp  gameEvent.h  stateEvent.cpp  stateEvent.h
src/objects/: button.cpp  button.h  gameObject.cpp  gameObject.h  point.cpp  point.h  snake.cpp  snake.h
src/state/: machine.cpp  machine.h  state.cpp  state.h  stateEvent.h
src/systems/: assetManager.cpp  assetManager.h  field.cpp  field.h  inputHandler.cpp  inputHandler.h  listener.h  map.cpp  map.h  scene.cpp  scene.h  signal.h  singleton.h  soundManager.cpp  soundManager.h  stats.cpp  stats.h
